--- a/app/src/main/res/values-en-rCA/strings.xml
+++ b/app/src/main/res/values-en-rCA/strings.xml
@@ -28,4 +28,5 @@
     <string name="min">Min Temperature</string>
     <string name="max">Max Temperature</string>
     <string name="uv">UV Rating</string>
+    <string name="toolbar">Toolbar</string>
 </resources>
