--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="min">Min Temperature</string>
     <string name="max">Max Temperature</string>
     <string name="uv">UV Rating</string>
+    <string name="toolbar">Toolbar</string>
 </resources>
